# ScrapEngine

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: clang-format.yml
assets/: simple_cloth.gltf
cmake/: clang-format-run.bash
include/app/: Camera.hpp  ClothSettings.hpp  Component.hpp  Entity.hpp  ImGuiRenderer.hpp  Instance.hpp  Log.hpp  PhysicsDemoSetup.hpp  RenderSurface.hpp  Renderer.hpp  SauceEngineApp.hpp  Scene.hpp  ScrapEngineApp.hpp  Settings.hpp  SwapChain.hpp
include/app/components/: ClothComponent.hpp  DirectionalLightComponent.hpp  LightComponent.hpp  MeshRendererComponent.hpp  PointLightComponent.hpp  RigidBodyComponent.hpp  SpotLightComponent.hpp  TransformComponent.hpp
include/app/modeling/: ClothInfo.hpp  GLTFExporter.hpp  GLTFLoader.hpp  Material.hpp  Mesh.hpp  Model.hpp  ModelNode.hpp  PropertyValue.hpp  Texture.hpp  TextureCache.hpp  Transform.hpp  Vertex.hpp
include/app/platform/: PlatformView.hpp  PlatformWindow.hpp  ProjectRoot.hpp
include/app/ui/: AppDebugStats.hpp  ImGuiComponent.hpp  ImGuiComponentManager.hpp
include/app/ui/components/: BulletText.hpp  Button.hpp  Checkbox.hpp  ChildWindow.hpp  CollapsingHeader.hpp  Columns.hpp  CustomTooltip.hpp  DebugStatsWindow.hpp  DragFloat.hpp  DragInt.hpp  Group.hpp  Image.hpp  ImageButton.hpp  Input.hpp  LabelText.hpp  PlotHistogram.hpp  PlotLines.hpp  ProgressBar.hpp  RadioButton.hpp  SameLine.hpp  Separator.hpp  SettingsWindow.hpp  SliderAngle.hpp  SliderFloat.hpp  SliderInt.hpp  Spacing.hpp  Text.hpp  TextColored.hpp  TextWrapped.hpp  Tooltip.hpp  TreeNode.hpp  Window.hpp
include/editor/: AABB.hpp  EditorApp.hpp  EditorCamera.hpp  OffscreenFramebuffer.hpp  SelectionManager.hpp  zip_file.hpp
include/editor/gizmos/: Gizmo.hpp  GizmoRenderer.hpp  RotateGizmo.hpp  ScaleGizmo.hpp  TranslateGizmo.hpp
include/editor/panels/: AssetBrowserPanel.hpp  EditorPanel.hpp  InspectorPanel.hpp  SceneHierarchyPanel.hpp  ViewportPanel.hpp
include/gpu/: Backend.hpp
include/gpu/metal/: Device.hpp  LayerPresenter.hpp  MetalDeviceInfo.hpp  MetalIBLResources.hpp  MetalMeshGpu.hpp  MetalMeshUpload.hpp  MetalPBRRenderer.hpp  MetalUnlitRenderer.hpp  VertexLayout.hpp
include/launcher/: AppLauncher.hpp  AppOptionsDefaults.hpp  LauncherCatalog.hpp  PolyHavenClient.hpp  optionParser.hpp
include/physics/: BVH.hpp  Cloth.hpp  Collider.hpp  ContactInfo.hpp  SphereBVH.hpp  SphereCollider.hpp  Vertex.hpp  XPBD.hpp
include/physics/constraints/: BendConstraint.hpp  CollisionConstraint.hpp  StretchConstraint.hpp
include/scrap/: MacroKitchen.hpp
include/scrap/modeling/: Mesh.hpp
include/scrap/platform/: PlatformView.hpp
shaders/: CMakeLists.txt
src/: cloth_scene_smoke.cpp  jenga_scene_builder.cpp  main.cpp  modeltest.cpp  modelviewer.cpp  xpbd_cloth_harness.cpp  xpbd_rigid_harness.cpp
src/app/: ImGuiRenderer.cpp  Log.cpp  ModelViewerRenderer.cpp  PhysicsDemoSetup.cpp  RenderSurface.mm  SauceEngineApp.cpp  Scene.cpp  ScrapEngineApp.cpp  Settings.cpp
src/app/components/: ClothComponent.cpp  DirectionalLightComponent.cpp  MeshRendererComponent.cpp  PointLightComponent.cpp  RigidBodyComponent.cpp  SpotLightComponent.cpp  TransformComponent.cpp
src/app/modeling/: GLTFExporter.cpp  GLTFLoader.cpp  Material.cpp  Mesh.cpp  Model.cpp  ModelNode.cpp  Texture.cpp  TextureCache.cpp  Transform.cpp
src/app/platform/: PlatformWindow.mm  ProjectRoot.cpp
src/app/ui/: BulletText.cpp  Button.cpp  Checkbox.cpp  ChildWindow.cpp  CollapsingHeader.cpp  Columns.cpp  CustomTooltip.cpp  Group.cpp  ImGuiComponentManager.cpp  Image.cpp  ImageButton.cpp  LabelText.cpp  PlotHistogram.cpp  PlotLines.cpp  ProgressBar.cpp  RadioButton.cpp  SameLine.cpp  Separator.cpp  SliderAngle.cpp  Spacing.cpp  Text.cpp  TextColored.cpp  TextWrapped.cpp  Tooltip.cpp  TreeNode.cpp  Window.cpp
src/app/ui/components/: DebugStatsWindow.cpp
src/editor/: EditorApp.cpp  EditorCamera.cpp  SelectionManager.cpp  main.cpp
src/editor/gizmos/: GizmoRenderer.cpp  RotateGizmo.cpp  ScaleGizmo.cpp  TranslateGizmo.cpp
src/editor/panels/: AssetBrowserPanel.cpp  InspectorPanel.cpp  SceneHierarchyPanel.cpp  ViewportPanel.cpp
src/gpu/metal/: LayerPresenter.mm  MetalDeviceInfo.mm  MetalIBLResources.mm  MetalMeshUpload.mm  MetalPBRRenderer.mm  MetalUnlitRenderer.mm
src/ios/: main.mm
src/launcher/: AppLauncher.cpp  CMakeLists.txt  LauncherCatalog.cpp  PolyHavenClient.cpp  optionParser.cpp
src/physics/: Cloth.cpp  RigidSolverShared.hpp  SphereBVH.cpp  XPBD.cpp  XPBDContacts.cpp  XPBDRigidSolve.cpp
testScene/: jenga_tower.gltf
